style.css
/* Custom Fonts */

@font-face {
  font-family: icons;
  src: url(./fonts/Glyphter.ttf);
}

@font-face {
  font-family: titleFont;
  src: url(./fonts/urw-palladio-l-roman.ttf);
}

@font-face {
  font-family: mainFont;
  src: url(./fonts/hind-regular.otf);
}

/* Global CSS */

* {
  text-decoration: none;
}

body {
  margin: 0;
}

h1 {
  display: inline;
  font-family: titleFont;
  font-size: 36px;
  padding-right: 30px;
  padding-left: 46px;
}

h1 span {
  color: #0291d8;
}

h2 {
  font-family: mainFont;
  color:#005480;
  margin-bottom: 0;
  font-size: 48px;
}

h3 {
  text-align: center;
  font-family: mainFont;
  color: #fefdfd;
  font-size: 24px;
  margin: 0px;
  padding-top: 18px;
}

p {
  font-family: mainFont;
  color: #000000;
  font-size: 1rem;
}

nav{
  margin: 0;
  padding: 0;
}

/* Styling For Icons*/

.icons {
  font-family: icons;
  color: #93e2ff;
}

/* Top Navigation/Information Bar*/

.navBarTop {
  background-color: #005480;
  color: #fefdfd;
  position: fixed;
  top: 0;
  width: 100%;
  height: 60px;
  
}

.navBarContainer {
  text-align: center;
}

.navBarContainer span {
  top: 18px;
  display: inline;
  padding-left: 12px;
  padding-right: 12px;

}

.navBarTop a {
  color: #fefdfd;
  font-family: mainFont;
}

.navBarTop strong {
  font-size: 18px;
}

.navBarTop span {
  margin-right:24px;
  margin-left: 24px;
  
}

/* Drop Down Menu (Languages)*/

.dropDown {
  display: inline-block;
  width: 200px;
  
}

.dropDown button {
  width: 200px;
  height: 60px;
  border: none;
  background-color: #93e2ff;
  color: #005480;
  font-family: mainFont;
  font-size: 18px;
  outline: none;
}

.dropDown button:focus + ul {
  display: list-item;
  pointer-events: all;
  float:left; 
}

.dropDown ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: none;
  pointer-events: none;
}

.dropDown li {
  background-color: #005480;
  list-style-type: none;
  width: 200px;
  text-align: center;
}

.dropDown a {
  font-family: mainFont;
  font-size: 18px;
  color:  #ffffff;
  padding-right: 12px;
}

.dropDown a:hover {
  text-decoration: underline;
  color: #93e2ff;
}

/* Main Navigation Bar*/

.navBar {
  background-color: #ffffff;
  height: 48px;
  padding: 60px;
  width: 80%;
  margin: 0 auto;
  box-shadow: 0px 10 0px rgba(0, 0, 0, 0.6);
}

.navBar ul {
  width: 100%; 
  text-align: center;
  padding: 0;
  padding-top: 36px;
  margin: 0 auto;
  font-family: mainFont;
  display: block;
  
}

.navBar li {
  display: inline;
  margin-right: 12px;
  margin-left: 12px;
}

.navBar a {
  color: #005480;
}
.navBar a:hover {
  color: #0291d8;
}

/* Burger Menu */

.burger {
  color:  #005480;
  display: none;
  font-size: 60px;
  position: absolute;
  float: right;
  top: 68px;
  padding-left: 60px;
}

/* Banner*/

.banner {
  width: 100%;
  background-image: url(./images/banner01.png);
  height: 480px;
  background-position: center;
  box-shadow: 0 0 6px 0px rgb(83, 83, 83) inset;
  justify-content: center;
}

.bannerContainer {
  padding-left: 20%;
  float: left;
}

.bannerContainer p{
  max-width: 600px;
}

.bannerButton1 {
  width: 200px;
  height: 48px;
  border: none;
  background-color: #005480;
  color: #005480;
  font-family: mainFont;
  font-size: 18px;
  outline: none;
  color:  #fefdfd;
  
}

.bannerButton2 {
  width: 200px;
  height: 48px;
  border: none;
  background-color: #93e2ff;
  color: #005480;
  font-family: mainFont;
  font-size: 18px;
  outline: none;
  color:  #fefdfd;
  
}

.banner2 {
  width: 100%;
  background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(./images/banner02.png) ;
  height: 480px;
  background-position: center;
  box-shadow: 0 0 6px 0px rgb(83, 83, 83) inset;
  justify-content: center;
  background-position: 0px 0px;
  padding: 0;
  
}

.banner2 p {
  color: #fefdfd;
  width: 480px;
  margin: 0 auto;
  padding-top: 60px;
  padding-bottom: 60px;
}

.bannerContainer2 {
  text-align: center;
}

.bannerContainer2 h2 {
  padding-top: 60px;
  margin: 0;
  color: #fefdfd;
  
}

.banner2Button {
  width: 480px;
  height: 48px;
  border: none;
  background-color: #93e2ff;
  color: #005480;
  font-family: mainFont;
  font-size: 18px;
  outline: none;
  margin-bottom: 80px;
  
}


/* Articles*/

.articals {
  background-color: #0291d8;
  height: 480px;
  width:100%;
}

.articleSlider{   
  width:100%;
  text-align:center;
  margin-top: 30px;
  
}

.leftArticle {
  margin-left: 20%;
  float:left;
  width:202px;
  height: 130px;
  background-image: url(./images/01.png);
  background-size: contain;

}

.centerArticle {
  display: inline-block;
  margin:0 auto;
  width:202px;
  height: 130px;
  background-image: url(./images/02.png);
  background-size: contain;
}

.rightArticle {
  margin-right: 20%;
  float:right;
  width:202px;
  height: 130px;
  background-image: url(./images/03.png );
  background-size: contain;
  
}

/* Call Back Section */

.callBack {
  height: 300px;
  background-color: #fefdfd;
  margin: 0 auto;
  text-align: center;
  width: 100%;
 
}

.callBack p {
  color: #000000;
}

.callBackForm {
  padding-top: 48px;
  display: inline-block;
  width:600px;
}

.callbackTextBox {
  display: inline-block;
  width:600px;
  text-align: left;
}

.callbackTextBox h3 {
  color: #005480;
  font-size: 36px;
  text-align: left;
  margin-top: 0;
  padding-left: 60px;
}

.callBack input {
  width:480px;
  border: none;
  height: 30px;
  background-color: #005480;
  margin-bottom: 12px;
  
}

input[type=submit] {
  max-width: 120px;
  background-color: #93e2ff;
  float: left;
  margin-left: 60px;
  color: #005480;
} 

input[type='number'] {
  -moz-appearance:textfield;
}

input, select, textarea{
  color: #fefdfd;
  padding-left: 12px;
}

::placeholder { 
  color: #fefdfd;
  padding-left: 12px;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

/* Footer Section */

.footer {
  height: 300px;
  background-color: #005480;
  margin: 0 auto;
  text-align: center;
  width: 100%;
}

.footer h3 {
  font-family: titleFont;
}


@media only screen and (max-width: 1300px) {
  .dropDown button {
    display: none;
  }

  .navBar a {
    display: none;
  }

  h1{
    float: left;
    margin: 0;
  }

  .navBarContainer {
    display: none;
  }

  .burger {
    display: inline;
  }

  .banner2 p {
    padding: 30px;
  }
  
}

@media only screen and (max-width: 900px) {
  
 
  
}

